# TransactionsLangchain

./: .gitignore  README.md  evaluate_agent.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  codeql.yml
evaluation/: __init__.py  evaluator.py  extractors.py  ground_truth_test_cases.json  tier1_functional.py  tier2_retrieval.py  tier3_response.py
evaluation/result/: Qwen3:1.7b_bevaluation_report.txt  Qwen3:1.7b_evaluation_results.json  Qwen3:4b_evaluation_report.txt  Qwen3:4b_evaluation_results.json  Qwen3:4b_reasoning_evaluation_report.txt  Qwen3:4b_reasoning_evaluation_results.json  functiongemma:270m_evaluation_report.txt  functiongemma:270m_evaluation_results.json
src/: agent.py  ingest_sql.py  ingest_vector.py
tests/: __init__.py  conftest.py  test_extractors.py  test_ingest_sql.py  test_tier1_functional.py  test_tier2_retrieval.py  test_tier3_response.py
